# Open-Vent-Bristol_MCU

./: .gitignore  .gitmodules  Back plate.dxf  CMakeLists.txt  LICENSE.txt  README.md  cleanall_build.sh  firmware_build.sh  unittest_build.sh
applications/: CMakeLists.txt
applications/tests/: CMakeLists.txt  test_measurement_display.cpp
applications/vent/: application_main.cpp  measurement_display.cpp  measurement_display.hpp
code/: CMakeLists.txt
code/adc/: adc.h  adc_atmega328p.c
code/application/: CMakeLists.txt
code/application/flow/: CMakeLists.txt  flow.c  flow_parameters.def
code/application/misc/: error.h  telemetry_buffer.h  util.h  utility.h
code/application/scheduler/: CMakeLists.txt  dispatcher.c  dispatcher.h  event.h  main.c  state_machine.c  state_machine.h  system_event.h  timer.c  timer.h
code/application/scheduler/private/: state_machine_priv.h  timer_priv.h
code/application/state/: CMakeLists.txt  event.h  state_machine.c  state_machine.h  system_event.h
code/application/state/private/: state_machine_priv.h
code/application/system/: CMakeLists.txt  system.c  system.h
code/application/ventilation/: CMakeLists.txt  ventilation.c  ventilation.h
code/application/ventilation/private/: ventilation_priv.h  ventilation_states.c  ventilation_states.h
code/board/: board.h  board_mk1.h
code/drivers/: CMakeLists.txt
code/drivers/actuator/: CMakeLists.txt  actuator.c  actuator.h
code/drivers/actuator/private/: actuator_priv.h  pid.c  pid.h
code/drivers/alarm/: CMakeLists.txt  alarm.c  alarm.h
code/drivers/cooling/: CMakeLists.txt  fan.c  fan.h
code/drivers/fpga/: CMakeLists.txt  display.c  display.h  display_controller.c  display_controller.h  fpga.c  fpga_api.h  fpga_display.c  messages.c  messages.h
code/drivers/fpga/private/: display_format.c  display_format.h  display_priv.h  fpga_priv.h
code/drivers/hardware_event/: CMakeLists.txt  interrupt_handlers.c  interrupt_handlers.h
code/drivers/misc/: error.h  result.h  util.h
code/drivers/motor/: CMakeLists.txt  motor.c  motor.h
code/drivers/scheduler/: CMakeLists.txt  scheduler.c  scheduler.h
code/drivers/sensor/: CMakeLists.txt  sensor.c  sensor.h  thermistor.c  thermistor.h
code/flow/: flow.c  flow.h  flow_parameters.def
code/functional_test/: CMakeLists.txt  adc_test_stm32l4.c  ftp_main.c  ftp_main_stm32l4.c  ftp_main_stm32l4.c.old  ftp_types.h  minimal.c  minimal_stm32l4.c  spi_test.c  uart_test.c
code/gpio/: gpio.h  gpio_atmega328p.c
code/hal/: CMakeLists.txt
code/hal/adc/: CMakeLists.txt  adc.h  adc_atmega328p.c  adc_atmega328pb.c  adc_stm32l4.c
code/hal/avr/: io.h
code/hal/board/: board.h  board_mk1.h  board_mk2.h  board_v3.h  board_v3_pinmux.h
code/hal/clock/: CMakeLists.txt  clock.h  clock_atmega328p.c  clock_atmega328pb.c  clock_stm32l4.c
code/hal/crc/: CMakeLists.txt  crc.h  crc_stm32l4.c
code/hal/gpio/: CMakeLists.txt  gpio.h  gpio_atmega328p.c  gpio_atmega328pb.c  gpio_stm32l4.c  multiplexer_74HC4052.c  parallel_port.h  parallel_port_stm32l4.c
code/hal/pinmux/: CMakeLists.txt  pinmux.h  pinmux_stm32l4.c  pinmux_stm32l4.h
code/hal/spi/: CMakeLists.txt  shift_register.h  shift_register_74HC595.c  spi.h  spi_atmega328p.c  spi_atmega328pb.c  spi_stm32l4.c
code/hal/stm32l4/: CMakeLists.txt
code/hal/types/: types.h  types_arm.h  types_avr.h
code/hal/uart/: CMakeLists.txt  uart.c  uart.h  uart_atmega328p.c  uart_atmega328pb.c  uart_stm32l4.c
code/hal/uart/priv/: uart_priv.h
code/hal/usb/: CMakeLists.txt  usb_common.h  usb_common_stm32l4.c
code/hal/usb/private/: usb_priv.h
code/hal/watchdog/: CMakeLists.txt  watchdog.h  watchdog_stm32l4.c
code/mcu/: clock_atmega328p.c  types.h  types_avr.h  utils_avr.h
drivers/: CMakeLists.txt
drivers/boards/board_mk2/: CMakeLists.txt  display.cpp  main.cpp  motor.cpp  scheduler.cpp  sensors.cpp  system.cpp
drivers/boards/common/: CMakeLists.txt  display.cpp  scheduler.cpp
drivers/boards/simulated/: CMakeLists.txt  display.cpp  main.cpp  motor.cpp  scheduler.cpp  sensors.cpp  sensors_priv.hpp  system.cpp
drivers/hal/: CMakeLists.txt
drivers/hal/board/: board.h  board_mk1.h  board_mk2.h
drivers/hal/clock/: CMakeLists.txt
drivers/hal/gpio/: gpio.h  gpio_atmega328p.c  multiplexer.h  parallel_port_stm32l4.c
drivers/hal/spi/: CMakeLists.txt  shift_register.h  shift_register_74HC595.c
drivers/hal/stm32l4/: CMakeLists.txt
drivers/hal/types/: types.h  types_x86.h
drivers/include/drivers/: display.hpp  error.hpp  motor.hpp  scheduler.hpp  sensors.hpp  system.hpp
drivers/include/mock/: display_mock.hpp  motor_mock.hpp  sensors_mock.hpp
drivers/include/types/: types.h  types_avr.h
unittests/: CMakeLists.txt  unittests_common.cmake
unittests/actuator/: CMakeLists.txt  actuator_unittest.c  all_tests.c
unittests/alarm/: CMakeLists.txt  alarm_unittest.c  all_tests.c
unittests/dispatcher/: CMakeLists.txt  all_tests.c  dispatcher_unittest.c
unittests/display/: CMakeLists.txt  all_tests.c  display_unittest.c
unittests/display_controller/: CMakeLists.txt  all_tests.c  display_controller_unittest.c
unittests/display_format/: CMakeLists.txt  all_tests.c  display_format_unittest.c
unittests/fan/: CMakeLists.txt  all_tests.c  fan_unittest.c
unittests/flow/: CMakeLists.txt  all_tests.c  flow_unittest.c
unittests/frameworks/: test_macros.h
unittests/hardware_event/: CMakeLists.txt  all_tests.c  hardware_event_unittest.c
unittests/messages/: CMakeLists.txt  all_tests.c  messages_unittest.c
unittests/mocks/: actuator_mock.h  alarm_mock.h  board_mock.h  board_unittest.h  crc_mock.h  dispatcher_mock.h  display_controller_mock.h  display_format_mock.h  display_mock.h  fake_state_defs.h  gpio_mock.h  pid_mock.h  sensor_mock.h  spi_mock.h  state_machine_mock.h  timer_mock.h  types_unittest.h
unittests/pid/: CMakeLists.txt  all_tests.c  pid_unittest.c
unittests/state_machine/: CMakeLists.txt  all_tests.c  state_machine_unittest.c
unittests/timer/: CMakeLists.txt  all_tests.c  timer_unittest.c
unittests/ventilation/: CMakeLists.txt  all_tests.c  ventilation_unittest.c
(+14 files in other folders)
